# uv-assignments

./: README.md
package-app/: pyproject.toml
package-app/src/package_app/: __init__.py  main.py
simple-app/: README.md  main.py  pyproject.toml
