[project]
name = "package-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Junaid", email = "junaidirshad098@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
package-app = "package_app:main"

main = "package_app.main:hello"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
